@@ -8,7 +8,7 @@ public class CheckIsDefinedEitherOutputOrKernel implements MogramRule {
 
     public boolean accept(Mogram mogram) {
         if (mogram.components().size() == 2) return parameters(mogram, 0) && parameters(mogram, 1);
-        if (mogram.components().size() == 1) return mogram.components().get(0).type().endsWith("Output");
+        if (mogram.components().size() == 1) return mogram.components().get(0).type().endsWith("Output") || (mogram.type().contains("Pool") && mogram.components().getFirst().type().contains("Kernel"));
         return false;
     }
 
